# AsQ

./: .gitignore  Cargo.toml  build.sh  elm-package.json  index.html
client/: Answer.elm  Authentication.elm  Config.elm  Error.elm  Main.elm  Ports.elm  Presentation.elm  Question.elm  Resource.elm
client/Mode/: Audience.elm  Landing.elm  Presenter.elm
server/: Cargo.toml
server/src/: lib.rs  main.rs
server/src/api/: .#presenters.rs  mod.rs  presenters.rs  questions.rs
server/src/api/presentations/: list.rs
server/src/api/presenters/: login.rs  register.rs
server/src/api/questions/: .#mod.rs  answer.rs  ask.rs  list.rs  mod.rs  nod.rs
server/src/capabilities/: initializers.rs  mod.rs  presenter.rs  sqlite.rs
server/src/entities/: mod.rs  presenter.rs
server/src/models/: answer.rs  audience.rs  mod.rs  presentation.rs  presenter.rs  question.rs  session.rs
server/src/tests/capabilities/: sqlite.rs
server/tests/: main.rs
server/tests/api/: mod.rs
server/tests/api/questions/: ask.rs
server/tests/capabilities/: mod.rs  sqlite.rs
server/tests/entities/: mod.rs  presenter.rs
server_old/src/api/questions/: ask.rs  nod.rs
server_old/src/models/: error.rs  mod.rs
src/: main.rs
src/api/: messages.rs
src/client/: Config.elm  Main.elm  Question.elm
src/models/: question.rs
src/server/: main.rs
src/server/api/: mod.rs  questions.rs
src/server/api/questions/: ask.rs  list.rs  mod.rs  nod.rs
src/server/models/: question.rs
static/css/: main.css
static/js/: main.js
tests/: QuestionTest.elm  elm-package.json
