[package]
name = "asq"
version = "0.1.0"
authors = ["Zack Mullaly <zsck@riseup.net>"]

[[bin]]
name = "asq"
path = "src/server/main.rs"

[dependencies]
rocket = "^0.3"
rocket_codegen = "^0.3"
serde = "^1.0"
serde_json = "^1.0"
serde_derive = "^1.0"

[dependencies.rocket_contrib]
version = "^0.3"
features = ["json"]

[dependencies.chrono]
version = "^0.4"
features = ["serde"]