[package]
name = "server"
version = "0.1.0"
authors = ["Zack Mullaly <zsck@riseup.net>"]

[lib]
name = "server_lib"
path = "src/lib.rs"

[[bin]]
name = "server_bin"
path = "src/main.rs"

[dependencies]
rusqlite = "*"
serde = "^1.0"
serde_json = "^1.0"
serde_derive = "^1.0"
ring-pwhash = "^0.12"
iron = "*"
bodyparser = "*"
urlencoded = "*"
persistent = "*"
router = "*"
staticfile = "*"
mount = "*"

[dependencies.chrono]
version = "^0.4"
features = ["serde"]

[dev-dependencies]
iron-test = "*"